[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Settings/Settings.gd" type="Script" id=2]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 56.0
texture_normal = ExtResource( 1 )
expand = true

[node name="SettingsList" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="SettingsList"]
margin_right = 109.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="SettingsList/FullscreenContainer"]
margin_top = 4.0
margin_right = 81.0
margin_bottom = 25.0
text = "Fullscreen"

[node name="Fullscreen" type="CheckBox" parent="SettingsList/FullscreenContainer"]
margin_left = 85.0
margin_right = 109.0
margin_bottom = 29.0

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="SettingsList/FullscreenContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
